Separação de formulários

--- a/src/app/_pages/create-account/create-account.component.html
+++ b/src/app/_pages/create-account/create-account.component.html
@@ -9,69 +9,30 @@
                     Informações do perfil
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Nome</label>
-                            <input type="text" class="form-control" formControlName="name" name="username" [ngClass]="{
-                            'invalid-field': !userForm.get('name').valid && showErrors}">
-                            <div class="invalid-message" *ngIf="!userForm.get('name').valid && showErrors">
-                                <span>Preenchimento obrigatório</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Sobrenome</label>
-                            <input type="text" class="form-control" formControlName="lastName" name="lastName"
-                                [ngClass]="{
-                            'invalid-field': !userForm.get('lastName').valid && showErrors}">
-                            <div class="invalid-message" *ngIf="!userForm.get('lastName').valid && showErrors">
-                                <span>Preenchimento obrigatório</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group col">
-                        <label>Senha</label>
-                        <div class="password-fields">
-                            <input [type]="passwordFieldVisible ? 'text' : 'password'" class="form-control"
-                                formControlName="password" name="Senha" [ngClass]="{
-                            'invalid-field':!userForm.get('password').valid && showErrors}">
-                            <span class="dds__icons" [ngClass]="{
-                                'dds__eye-view-on': passwordFieldVisible, 
-                                'dds__eye-view-off': !passwordFieldVisible
-                            }" (click)="toglePasswordField()"></span>
-                        </div>
-                        <div class="invalid-message"
-                            *ngIf="userForm.get('password').invalid && userForm.get('password').value == '' && showErrors">
-                            <span>Preenchimento obrigatório</span>
-                        </div>
-                    </div>
-                    <div class="form-group col">
-                        <label>Confirme senha</label>
-                        <div class="password-fields">
-                            <input [type]="passwordConfirmationFieldVisible ? 'text' : 'password'" class="form-control"
-                                formControlName="passwordConfirm" name="Senha" [ngClass]="{
-                            'invalid-field': (userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors ||
-                            userForm.get('passwordConfirm').valid && userForm.get('passwordConfirm').value != userForm.get('password').value && 
-                            userForm.get('password').value != '')}">
-                            <span class="dds__icons" [ngClass]="{
-                                'dds__eye-view-on': passwordConfirmationFieldVisible, 
-                                'dds__eye-view-off': !passwordConfirmationFieldVisible
-                            }" (click)="toglePasswordConfirmField()"></span>
-                        </div>
-                        <div class="invalid-message"
-                            *ngIf="userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors">
-                            <span>Preenchimento obrigatório</span>
-                        </div>
-                        <div class="invalid-message"
-                            *ngIf="userForm.get('passwordConfirm').valid && 
-                        userForm.get('passwordConfirm').value != userForm.get('password').value && userForm.get('password').value != ''">
-                            <span>As senhas não conferem.</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-6">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Nome</label>
+                                    <input type="text" class="form-control" formControlName="name" name="username" [ngClass]="{
+                                    'invalid-field': !userForm.get('name').valid && showErrors}">
+                                    <div class="invalid-message" *ngIf="!userForm.get('name').valid && showErrors">
+                                        <span>Preenchimento obrigatório</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Sobrenome</label>
+                                    <input type="text" class="form-control" formControlName="lastName" name="lastName"
+                                        [ngClass]="{
+                                    'invalid-field': !userForm.get('lastName').valid && showErrors}">
+                                    <div class="invalid-message" *ngIf="!userForm.get('lastName').valid && showErrors">
+                                        <span>Preenchimento obrigatório</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="toggle-container">
                             <div>
                                 <span (click)="togleCpfCnpj(true)" class="cpf-side"
@@ -146,9 +107,85 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Qual o seu estado?</label>
+                                    <ng-select [items]="states" bindLabel="name" [searchable]="true" [clearable]="true"
+                                        [multiple]="false" formControlName="state"
+                                        [ngClass]="{'invalid-field': !userForm.get('state').valid && showErrors}">
+                                    </ng-select>
+                                    <div class="invalid-message" *ngIf="!userForm.get('state').valid && showErrors">
+                                        <span>Preenchimento obrigatório</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Sua formação profissional</label>
+                                    <input type="text" class="form-control"
+                                        [ngClass]="{'invalid-field': userForm.get('background').invalid && showErrors}"
+                                        formControlName="background" name="background">
+                                    <div class="invalid-message"
+                                        *ngIf="userForm.get('background').value == '' && showErrors">
+                                        <span>Preenchimento obrigatório</span>
+                                    </div>
+                                    <!-- 
+                                    <div class="invalid-message"
+                                        *ngIf="userForm.get('emailConfirmation').value != userForm.get('email').value && userForm.get('email').valid && userForm.get('emailConfirmation').valid">
+                                        <span>Os e-mails não conferem</span>
+                                    </div>
+                                    <div class="invalid-message"
+                                        *ngIf="!userForm.get('emailConfirmation').valid && userForm.get('emailConfirmation').value != ''">
+                                        <span>Informação não é válida</span>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-6">
-                        <div>
+                    <div class="col-6 second-column">
+                        <div class="row">
+                            <div class="form-group col">
+                                <label>Senha</label>
+                                <div class="password-fields">
+                                    <input [type]="passwordFieldVisible ? 'text' : 'password'" class="form-control"
+                                        formControlName="password" name="Senha" [ngClass]="{
+                                    'invalid-field':!userForm.get('password').valid && showErrors}">
+                                    <span class="dds__icons" [ngClass]="{
+                                        'dds__eye-view-on': passwordFieldVisible, 
+                                        'dds__eye-view-off': !passwordFieldVisible
+                                    }" (click)="toglePasswordField()"></span>
+                                </div>
+                                <div class="invalid-message"
+                                    *ngIf="userForm.get('password').invalid && userForm.get('password').value == '' && showErrors">
+                                    <span>Preenchimento obrigatório</span>
+                                </div>
+                            </div>
+                            <div class="form-group col">
+                                <label>Confirme senha</label>
+                                <div class="password-fields">
+                                    <input [type]="passwordConfirmationFieldVisible ? 'text' : 'password'" class="form-control"
+                                        formControlName="passwordConfirm" name="Senha" [ngClass]="{
+                                    'invalid-field': (userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors ||
+                                    userForm.get('passwordConfirm').valid && userForm.get('passwordConfirm').value != userForm.get('password').value && 
+                                    userForm.get('password').value != '')}">
+                                    <span class="dds__icons" [ngClass]="{
+                                        'dds__eye-view-on': passwordConfirmationFieldVisible, 
+                                        'dds__eye-view-off': !passwordConfirmationFieldVisible
+                                    }" (click)="toglePasswordConfirmField()"></span>
+                                </div>
+                                <div class="invalid-message"
+                                    *ngIf="userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors">
+                                    <span>Preenchimento obrigatório</span>
+                                </div>
+                                <div class="invalid-message"
+                                    *ngIf="userForm.get('passwordConfirm').valid && 
+                                userForm.get('passwordConfirm').value != userForm.get('password').value && userForm.get('password').value != ''">
+                                    <span>As senhas não conferem.</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="password-validation-guide">
                             <label class="password-errors-label">Sua senha deve conter</label>
                             <div class="password-errors">
                                 <div class="errors">
@@ -201,51 +238,6 @@
                     </div>
                 </div>
 
-
-                <div class="col">
-                    <!-- <div class="row">
-                        <div class="form-group col">
-                            <label>Senha</label>
-                            <div class="password-fields">
-                                <input [type]="passwordFieldVisible ? 'text' : 'password'" class="form-control"
-                                    formControlName="password" name="Senha" [ngClass]="{
-                                'invalid-field':!userForm.get('password').valid && showErrors}">
-                                <span class="dds__icons" [ngClass]="{
-                                    'dds__eye-view-on': passwordFieldVisible, 
-                                    'dds__eye-view-off': !passwordFieldVisible
-                                }" (click)="toglePasswordField()"></span>
-                            </div>
-                            <div class="invalid-message"
-                                *ngIf="userForm.get('password').invalid && userForm.get('password').value == '' && showErrors">
-                                <span>Preenchimento obrigatório</span>
-                            </div>
-                        </div>
-                        <div class="form-group col">
-                            <label>Confirme senha</label>
-                            <div class="password-fields">
-                                <input [type]="passwordConfirmationFieldVisible ? 'text' : 'password'"
-                                    class="form-control" formControlName="passwordConfirm" name="Senha" [ngClass]="{
-                                'invalid-field': (userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors ||
-                                userForm.get('passwordConfirm').valid && userForm.get('passwordConfirm').value != userForm.get('password').value && 
-                                userForm.get('password').value != '')}">
-                                <span class="dds__icons" [ngClass]="{
-                                    'dds__eye-view-on': passwordConfirmationFieldVisible, 
-                                    'dds__eye-view-off': !passwordConfirmationFieldVisible
-                                }" (click)="toglePasswordConfirmField()"></span>
-                            </div>
-                            <div class="invalid-message"
-                                *ngIf="userForm.get('passwordConfirm').invalid && userForm.get('passwordConfirm').value != '' && showErrors">
-                                <span>Preenchimento obrigatório</span>
-                            </div>
-                            <div class="invalid-message"
-                                *ngIf="userForm.get('passwordConfirm').valid && 
-                            userForm.get('passwordConfirm').value != userForm.get('password').value && userForm.get('password').value != ''">
-                                <span>As senhas não conferem.</span>
-                            </div>
-                        </div>
-                    </div> -->
-
-                </div>
             </div>
             <!-- <div class="col-5">
                 <div class="sub-title">Informações do serviço</div>
