--- a/src/app/_pages/create-account/create-account.component.scss
+++ b/src/app/_pages/create-account/create-account.component.scss
@@ -2,6 +2,19 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.row {
+  margin-bottom: 1.5rem;
+}
+
+.second-column {
+  padding-left: 2rem;
+}
+
+::ng-deep .ng-select .ng-select-container {
+  height: 2.5rem;
+  border-radius: 8px;
+}
+
 .background {
   position: fixed;
   top: 0;
@@ -92,6 +105,10 @@ body {
 
     .cpf-input {
       padding-right: 0%;
+    }
+
+    .password-validation-guide {
+      margin: 0.5rem 0 2rem;
     }
 
     .toggle-container {
@@ -193,14 +210,15 @@ body {
     }
 
     .errors {
+      display: flex;
+      align-items: center;
+      padding: 0.5rem;
+
       label {
         margin-left: 2px;
         color: #989898;
       }
 
-      display: flex;
-      align-items: center;
-      padding: 2px;
     }
 
     .password-fields {
