--- a/src/app/_pages/create-account/create-account.component.scss
+++ b/src/app/_pages/create-account/create-account.component.scss
@@ -10,11 +10,6 @@ body {
   padding-left: 2rem;
 }
 
-::ng-deep .ng-select .ng-select-container {
-  height: 2.5rem;
-  border-radius: 8px;
-}
-
 .background {
   position: fixed;
   top: 0;
@@ -31,13 +26,18 @@ body {
   color: white;
 }
 
-#create-account-container {
+#user-data, #service-data, #plan-data {
   display: flex;
   margin: 4% 10%;
 
   form {
     width: 100rem;
     max-width: 100rem;
+
+    ::ng-deep .ng-select .ng-select-container {
+      height: 2.5rem;
+      border-radius: 8px;
+    }
 
     .title {
       color: #000000;
@@ -153,8 +153,9 @@ body {
       display: flex;
       padding: 1.6%;
       min-width: 8rem;
-      margin: 2% 0%;
+      margin-bottom: 1rem;
       justify-content: center;
+      text-decoration: none;
     }
 
     .btn-advance {
@@ -166,7 +167,7 @@ body {
       display: flex;
       padding: 1.6%;
       min-width: 8rem;
-      margin: 2% 0% 2% 5%; 
+      margin: 0 0 1rem 2rem; 
       justify-content: center;
     }
 
@@ -198,15 +199,18 @@ body {
       width: 3px;
       height: 3px;
       border-radius: 19px;
-      margin: 7px;
+      margin: 7px 10px;
     }
 
     .password-check {
-      background: #308C47;
-      width: 4px;
-      height: 4px;
-      border-radius: 19px;
-      margin: 7px;
+      margin: 0 7px;
+      
+      i {
+        color: #308C47;
+        font-size: x-small;
+        font-weight: bold;
+      }
+
     }
 
     .errors {
@@ -270,7 +274,7 @@ body {
   }
 }
 
-#select-plan {
+#plan-data {
   display: block;
   margin: 4% 10%;
 
